--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         .icon:hover { opacity: 1; }
         .settings-icon { position: absolute; left: 0; top: 50%; transform: translateY(-50%); }
         .info-icon { position: absolute; right: 0; top: 50%; transform: translateY(-50%); font-size: 1.6rem; }
-        .input-group { display: flex; flex-direction: column; gap: 1rem; margin: 1.5rem 0; }
+        .input-group { display: flex; flex-direction: row; gap: 1rem; margin: 1.5rem 0; }
         @media (min-width: 600px) { .input-group { flex-direction: row; } }
         .input-field { flex: 1; text-align: right; }
         label { display: block; margin-bottom: 0.5rem; font-weight: bold; }
