--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
     </div>
     
     <div class="footer">
-        <p>Dev: Chagai Yechiel</p>
+                <p>Dev: <a href="https://www.linkedin.com/in/chagai-yechiel/" target="_blank" rel="noopener noreferrer">Chagai Yechiel</a></p>
+
         <p>Version 9.0</p>
     </div>
 
